    to /etc/apache2/envvars on how to change the options for www-browser.
    Closes: #561496, #272069
  * Improve function to detect apache2 pid in init-script (closes: #562583).
  * Add hint README.Debian on how to pass auth info to CGI scripts.
    Closes: #483219
  * Point to README.backtrace in apache2-dbg's description.

 -- Stefan Fritsch <sf@debian.org>  Sat, 02 Jan 2010 17:41:40 +0100

apache2 (2.2.14-4) unstable; urgency=low

  * Disable localized error pages again by default because they break
    configurations with "<Location /> SetHandler ...". A workaround is
    described in the comments in /etc/apache2/conf.d/localized-error-pages
    (closes: #543333).
  * mod_rewrite: Fix URLs in redirects with literal IPv6 hosts
    (closes: #557015).
  * Automatically listen on port 443 if mod_gnutls is loaded (closes: #558234).
  * Add man page for split-logfile.
  * Link with -lcrypt where necessary to fix a FTBFS with binutils-gold
    (closes: #553946).

 -- Stefan Fritsch <sf@debian.org>  Sun, 13 Dec 2009 20:05:37 +0100

apache2 (2.2.14-3) unstable; urgency=low

  * Backport various mod_dav/mod_dav_fs fixes from upstream trunk svn. This
    includes:
    - Make PUT replace files atomically (closes: #525137).
    - Make MOVE not delete the destination if the source file disappeared in
      the meantime (closes: #273476).
    NOTE: The format of the DavLockDB has changed. The default DavLockDB will
    be deleted on upgrade. Non-default DavLockDBs should be deleted manually.
  * Fix output of "/etc/init.d/apache2 status" (closes: #555687).
  * Update the comment about SNI in ports.conf (closes: #556932).
  * Set redirect-carefully for Konqueror/4.

 -- Stefan Fritsch <sf@debian.org>  Sat, 21 Nov 2009 10:20:54 +0100

apache2 (2.2.14-2) unstable; urgency=medium

  * Security:
    Reject any client-initiated SSL/TLS renegotiations. This is a partial fix
    for the TLS renegotiation prefix injection attack (CVE-2009-3555).