@@ -1,2 +1,0 @@
-usr/sbin
-usr/lib/debug/usr/sbin
