@@ -1,3 +1,4 @@
 usr/lib/apache2/mpm-worker
 usr/lib/apache2/mpm-prefork
 usr/lib/apache2/mpm-event
+usr/lib/apache2/mpm-itk
