@@ -1,5 +1,7 @@
 usr/share/apache2/icons
 usr/sbin/apache2ctl
 usr/share/apache2/error
-usr/sbin/envvars-std usr/share/apache2/build
-etc/apache2 usr/share/doc/apache2.2-common/examples
+usr/sbin/envvars-std	usr/share/apache2/build
+etc/apache2		usr/share/doc/apache2.2-common/examples
+debian/config-dir/*	etc/apache2
+debian/a2enmod		usr/sbin
