@@ -1,0 +1,5 @@
+usr/sbin
+usr/lib/debug/usr/sbin
+usr/lib/apache2/mpm-MPMXXX
+usr/share/lintian/overrides
+usr/share/bug/apache2-mpm-MPMXXX
