@@ -97,6 +97,7 @@ INSTALL=/usr/bin/install
 clean: unpatch
 	dh_testdir
 	rm -rf $(BUILD) mpm-worker mpm-prefork mpm-event mpm-itk install
+	rm -rf debian/tmp-worker debian/tmp-prefork
 	dh_clean
 
 build: patch-stamp build-stamp 
@@ -147,26 +148,25 @@ mpm-worker mpm-prefork mpm-event mpm-itk: mpm-%: patch-stamp mpm-%.scripts-stamp
 	./apache2 -l |grep -v $* > mods.list
 	touch $@
 
-mpm-%.scripts-stamp: debian/mpms.postinst debian/mpms.preinst debian/mpms.prerm debian/mpms.lintian-overrides
-	for f in postinst preinst prerm; do \
-		perl -p -e s/P=xxx/P=apache2-mpm-$*/ < debian/mpms.$$f > debian/apache2-mpm-$*.$$f ;\
+mpm-%.scripts-stamp: debian/mpms.postinst debian/mpms.preinst debian/mpms.prerm debian/mpms.lintian-overrides debian/mpms.dirs debian/mpms.links
+	for f in postinst preinst prerm links dirs ; do \
+		perl -p -e "s/MPMXXX/$*/g" < debian/mpms.$$f > debian/apache2-mpm-$*.$$f ;\
 	done
 	perl -p -e "s/^/apache2-mpm-$*: /" < debian/mpms.lintian-overrides > debian/apache2-mpm-$*.lintian-overrides
 	touch $@ 
  
-install-%: mpm-%
+install-worker: mpm-worker
 	dh_testdir
 	dh_testroot
-	dh_installdirs
-	cd $(BUILD)/$* ;\
-	$(MAKE) DESTDIR=$(REALCURDIR)/debian/apache2-mpm-$* install
-
-install-common: install-worker
-	dh_testdir
-	dh_testroot
-	dh_installdirs
 	cd $(BUILD)/worker ;\
 	$(MAKE) DESTDIR=$(REALCURDIR)/debian/tmp install
+	ln -sf tmp debian/tmp-worker
+
+install-prefork: mpm-prefork
+	dh_testdir
+	dh_testroot
+	cd $(BUILD)/prefork ;\
+	$(MAKE) DESTDIR=$(REALCURDIR)/debian/tmp-prefork install
 
 install-dev: install-worker install-prefork
 	dh_testdir
@@ -178,8 +178,8 @@ install-dev: install-worker install-prefork
 		else \
 			TARGET=threaded ;\
 		fi ;\
-		cp debian/apache2-mpm-$$i/usr/include/apache2/* debian/apache2-$$TARGET-dev/usr/include/apache2/ ;\
-		cp debian/apache2-mpm-$$i/usr/share/apache2/build/* debian/apache2-$$TARGET-dev/usr/share/apache2/build/ ;\
+		cp debian/tmp-$$i/usr/include/apache2/* debian/apache2-$$TARGET-dev/usr/include/apache2/ ;\
+		cp debian/tmp-$$i/usr/share/apache2/build/* debian/apache2-$$TARGET-dev/usr/share/apache2/build/ ;\
 		cp $(BUILD)/$$i/support/apxs debian/apache2-$$TARGET-dev/usr/bin/apxs2 ;\
 		perl -p -e s/^P=apache2/P=apache2-$${TARGET}-dev/ < debian/apache2.postinst > debian/apache2-$${TARGET}-dev.postinst ;\
 	done
@@ -195,9 +195,10 @@ install-dev: install-worker install-prefork
 		mv tmp_config_vars.mk config_vars.mk ) ; \
 	done
 
-install: build install-worker install-prefork install-common install-dev
+install: build install-dev
 	dh_testroot
 	dh_testdir
+	dh_installdirs
 
 	#cleanup of death
 	rm -rf debian/tmp/etc/apache2/original
@@ -218,11 +219,9 @@ install: build install-worker install-prefork install-common install-dev
 		uudecode -o debian/tmp/usr/share/apache2/icons/$$i debian/icons/$$i".uue"; \
 	done
 
-	dh_install --list-missing --sourcedir=debian/tmp
+	dh_install --list-missing
 
 	cp debian/bash_completion debian/apache2.2-common/etc/bash_completion.d/apache2.2-common
-	install -m755 debian/apache2.2-common.bug.script debian/apache2.2-common/usr/share/bug/apache2.2-common/script
-	install -m644 debian/apache2.2-common.bug.control debian/apache2.2-common/usr/share/bug/apache2.2-common/control
 
 	# standard suexec
 	chmod 4754 debian/apache2-suexec/usr/lib/apache2/suexec 
@@ -231,7 +230,6 @@ install: build install-worker install-prefork install-common install-dev
 	chmod 644 debian/apache2.2-bin/usr/lib/apache2/modules/mod_suexec.so
 
 	# configurable suexec
-	mkdir -p debian/apache2-suexec-custom/usr/lib/apache2 debian/apache2-suexec-custom/etc/apache2/suexec
 	cp debian/build-tree/worker/support/suexec-custom debian/apache2-suexec-custom/usr/lib/apache2/suexec
 	cp debian/suexec-custom.config debian/apache2-suexec-custom/etc/apache2/suexec/www-data
 	chmod 4754 debian/apache2-suexec-custom/usr/lib/apache2/suexec 
@@ -252,31 +250,11 @@ install: build install-worker install-prefork install-common install-dev
 	rmdir debian/apache2-doc/usr/share/doc/apache2-doc/manual/style/xsl
 	rm -r debian/apache2-doc/usr/share/doc/apache2-doc/manual.orig
 
-	#apache2-utils extras
-	cp support/check_forensic debian/apache2-utils/usr/sbin/check_forensic
-	cp $(BUILD)/worker/support/split-logfile debian/apache2-utils/usr/sbin/split-logfile
-	chmod 755 debian/apache2-utils/usr/sbin/split-logfile
-
-	cp -a debian/config-dir/* debian/apache2.2-common/etc/apache2
 	cp debian/logrotate debian/apache2.2-common/etc/logrotate.d/apache2
-	
-	install -m755 debian/a2enmod debian/apache2.2-common/usr/sbin
-	ln -s a2enmod debian/apache2.2-common/usr/sbin/a2dismod
-	ln -s a2enmod debian/apache2.2-common/usr/sbin/a2ensite
-	ln -s a2enmod debian/apache2.2-common/usr/sbin/a2dissite
 	cp debian/default-index.html debian/apache2.2-common/usr/share/apache2/default-site/index.html
 
 	for i in worker prefork event itk; do \
-		rm -rf debian/apache2-mpm-$$i/ ;\
-		mkdir -p debian/apache2-mpm-$$i/usr/sbin ;\
-		mkdir -p debian/apache2-mpm-$$i/usr/lib/debug/usr/sbin ;\
-		mkdir -p debian/apache2.2-bin/usr/lib/apache2/mpm-$$i ;\
 		install -m 755 $(BUILD)/$$i/apache2 debian/apache2.2-bin/usr/lib/apache2/mpm-$$i/apache2 ;\
-		ln -s /usr/lib/apache2/mpm-$$i/apache2 debian/apache2-mpm-$$i/usr/sbin/apache2 ;\
-		ln -s ../lib/apache2/mpm-$$i/apache2 debian/apache2-mpm-$$i/usr/lib/debug/usr/sbin/apache2 ;\
-		mkdir -p debian/apache2-mpm-$$i/usr/share/lintian/overrides ;\
-		mkdir -p debian/apache2-mpm-$$i/usr/share/bug/apache2-mpm-$$i ;\
-		ln -s ../apache2.2-common/script debian/apache2-mpm-$$i/usr/share/bug/apache2-mpm-$$i ;\
 	done
 
 	for pkg in `awk '/^Package:/ { print $$2 }' debian/control`; do \
@@ -284,16 +262,11 @@ install: build install-worker install-prefork install-common install-dev
 	done
 
 	# common dh stuff
-	dh_testdir
-	dh_testroot
-	dh_installdirs
 	dh_installdocs debian/README.backtrace -papache2.2-common -papache2.2-bin
 	dh_installdocs debian/README.backtrace -Napache2.2-common -Napache2.2-bin
-	mkdir -p debian/apache2/usr/share/bug/apache2
-	ln -sf ../apache2.2-common/script debian/apache2/usr/share/bug/apache2
-	install -m644 debian/apache2.bug.control debian/apache2/usr/share/bug/apache2/control
 	cp debian/README.Debian debian/apache2-doc/usr/share/doc/apache2-doc/
 	dh_installman
+	dh_bugfiles
 	dh_installinit --no-start -r --name=apache2 -- defaults 91 09
 	dh_installcron --name=apache2
 	dh_installchangelogs CHANGES -Napache2-suexec -Napache2-suexec-custom -Napache2
